--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ buildscript {
 
 plugins {
     id 'com.matthewprenger.cursegradle' version '1.0.9'
-    id 'org.ajoberstar.grgit' version '1.3.2'
+    id 'org.ajoberstar.grgit' version '2.1.0'
 }
 
 apply plugin: 'net.minecraftforge.gradle.forge'
@@ -26,7 +26,7 @@ apply plugin: 'maven'
 apply plugin: "org.ajoberstar.grgit"
 apply plugin: "com.matthewprenger.cursegradle"
 
-ext.git = grgit.open(file('.'))
+ext.git = grgit.open(currentDir: file('.'))
 
 ext {
     configFile = file "build.properties"
@@ -49,7 +49,7 @@ archivesBaseName = "VeinMiner"
 
 minecraft {
     version = config.minecraft_version + "-" + config.forge_version
-    mappings = "snapshot_20170708"
+    mappings = "snapshot_20180116"
     runDir = "run"
 }
 
