--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,7 @@ archivesBaseName = "VeinMiner"
 
 minecraft {
     version = config.minecraft_version + "-" + config.forge_version
-    mappings = "snapshot_20180119"
+    mappings = config.mcp_version
     runDir = "run"
 }
 
