--- a/build.properties
+++ b/build.properties
@@ -3,7 +3,8 @@
 #
 minecraft_version=1.12.2
 compatible_versions=1.12.2
-forge_version=14.23.1.2599
+forge_version=14.23.1.2600
+mcp_version=snapshot_20180120
 
 #
 #
